--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="{{ url_for('static', filename= 'css/style.css') }}">
         <title>Simple webapp</title>
     </head>
     <body>
         <h1>Hello, Client</h1>
         <form action="/">
-            <div class="form-example">
-                <label for="name">Enter URL: </label>
+            <div class="form-url">
+                <label for="url">Enter URL: </label>
                 <input type="url" name="name"/>
                 <input type = "submit"/>
             </div>
