update flask app

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="{{ url_for('static', filename= 'css/style.css') }}">
-        <title>Simple webapp</title>
-    </head>
-    <body>
-        <h1>Hello, Client</h1>
-        <form action="/">
-            <div class="form-url">
-                <label for="url">Enter URL: </label>
-                <input type="url" name="name"/>
-                <input type = "submit"/>
-            </div>
-        </form>
-        <p>
-            server info
-            {{ serverInfo }}
-            <br>
-            client info
-            {{ ClientInfo }}
-        </p>
-    </body>
+<html>
+<head>
+    <title>Server Information</title>
+    <style>
+        h1 {
+            color: #333;
+            font-size: 20px;
+        }
+
+        pre {
+            background-color: #f8f8f8;
+            padding: 10px;
+        }
+    </style>
+</head>
+<body>
+    <h1>Client Request Header:</h1>
+    <pre>
+        {% for key, value in client_request_header %}
+            {{ key }}: {{ value }}<br>
+        {% endfor %}
+    </pre>
+
+    <h1>Server Information:</h1>
+    <pre>
+        {% for key, value in server_info.items() %}
+            {{ key }}: {{ value }}<br>
+        {% endfor %}
+    </pre>
+
+    <h1>Response Headers:</h1>
+    <pre>
+        {% for key, value in response_headers.items() %}
+            {{ key }}: {{ value }}<br>
+        {% endfor %}
+    </pre>
+</body>
 </html>
